kubernetes/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/component: monitoring
    budgetanalyzer.io/ingress-routes: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.32
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: v1.32
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: v1.32
