kubernetes/monitoring/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: istio-ingress-gateway
    namespace: istio-ingress
  hostnames:
  - "grafana.budgetanalyzer.localhost"
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: "https"
    backendRefs:
    - name: prometheus-stack-grafana
      port: 80
